--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,23 @@
-SUPABASE_PROJECT_REF=ref
-NEXT_PUBLIC_SUPABASE_URL=url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=key
+SUPABASE_PROJECT_REF=
+NEXT_PUBLIC_SUPABASE_URL=
+supabase_password=
+# dozzed-fezqyw-diWko2
+
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=
+
+NODE_ENV=development # production | development
+
+POSTHOG_API_KEY=
+
+SERVICE_PRICE=50
+
+#posthog
+NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+
+#paypal
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=
