--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -59,6 +61,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^4.36.1",
+    "@tsparticles/engine": "^3.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -66,6 +69,7 @@
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.279.0",
     "next": "^14.2.8",
     "next-nprogress-bar": "^2.3.13",
@@ -74,7 +78,9 @@
     "next-sitemap": "^3.1.55",
     "next-themes": "^0.2.1",
     "path-to-regexp": "^8.0.0",
+    "posthog-js": "^1.194.4",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -109,6 +115,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "commitizen": "^4.3.0",
     "concurrently": "^7.6.0",
+    "daisyui": "^4.12.14",
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-esnext": "^4.1.0",
